more finishing touches

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,4 +7,4 @@
 <!--  LinkedIn Badge -->
 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
-<p>THIS IS THE FOOTER!!!</p>
+<p style="text-align:center;color:#005985;">THIS IS THE FOOTER!!!</p>
