--- a/_includes/section_certs.html
+++ b/_includes/section_certs.html
@@ -2,9 +2,8 @@
         <div class="top-rounded-panel grey-bg">
                 <h1>Certifications</h1>
         </div>
-        <div class="content-rounded-panel">
-                <div>
-                        <table class="table table-striped table-hover table-condensed">
+        <div class="content-rounded-panel" style="margin-bottom:0px;">
+                        <table class="table table-striped table-hover table-condensed" style="margin-bottom:0px;">
                                 <thead>
                                         <tr>
                                                 <th><a style="cursor: pointer;">Certification</a></th>
@@ -21,8 +20,6 @@
                                         {% endfor %}
                                 </tbody>
                         </table>
-                </div>
-                <br>
         </div>
 </div>
 
