--- a/_includes/section_contact.html
+++ b/_includes/section_contact.html
@@ -1,11 +1,12 @@
-<div id="contactBubble" class="rounded_panel txt_lightgrey">
+
+<div id="contactBubble" class="rounded_panel txt_lightgrey" style="text-align:center;">
         <div class="top-rounded-panel grey-bg">
 		<br>
-		<img style="align:center;" src="{{site.url}}/assets/portrait.png" width="50%" height="50%">
-                <h1 id="user-contact">Contact Me</h1>
+		<img style="margin-left:auto;margin-right:28%;display:block;border: 3px solid #ddd; border-radius: 4px; padding:10px;" src="{{site.url}}/assets/portrait.png" class="img-fluid" width="55%" height="auto">
+                <h1 id="user-contact">Contact Me &nbsp;</h1>
         </div>
         <div class="content-rounded-panel">
-                <div id="contactBlurb">
+                <div id="contactBlurb" style="font-size:1vw;">
                 {{site.email}}<br>
 		<img src="{{site.url}}/assets/pin.png" width="15px" min-width="15px" height="15px" min-height="15px">Chicago, IL
                 </div>
