--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -1,4 +1,4 @@
-<div id="introBubble" class="rounded_panel txt_lightgrey">
+<div id="introBubble" style="font-size:1vw;" class="rounded_panel txt_lightgrey">
 	<div class="top-rounded-panel grey-bg">
 		<h1 id="user-intro">Background</h1>
 	</div>
