--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		<div id="navbar" class="navbar-header">
 			<ul class="nav navbar-nav navbar navbar-right">
 				{% for link in site.primarylinks %}
-					<div class="col"><li><a class="nav-link" href="{{link.url}}" target="_blank">{{link.title}}</a></li></div>
+					<div class="col"><li><a style="color:gray;" class="nav-link" href="{{link.url}}" target="_blank">{{link.title}}</a></li></div>
 				{% endfor %}
 			</ul>
 		</div>
