--- a/_includes/section_courses.html
+++ b/_includes/section_courses.html
@@ -1,14 +1,15 @@
 <div class="rounded_panel txt_lightgrey">
         <div class="top-rounded-panel grey-bg">
-                <h1>(Relevant??) Coursework</h1>
+                <h1>Relevant Coursework</h1>
         </div>
         <div class="content-rounded-panel">
-                <div>
+                <div class="row">
 		{% for edu in site.education %}
+			<div class="col">
                         <table class="table table-striped table-hover table-condensed">
                                 <thead>
                                         <tr>
-                                                <th class="hidden-sm hidden-xs" ><a style="cursor: pointer;">{{edu.school}}</a></$
+                                                <th class="hidden-sm hidden-xs"><a style="cursor: pointer;">{{edu.school}}</a></th>
                                         </tr>
                                 </thead>
                                 <tbody>
@@ -19,6 +20,7 @@
                                         {% endfor %}
                                 </tbody>
                         </table>
+			</div>
 		{% endfor %}
                 </div>
                 <br>
