--- a/_includes/section_contact.html
+++ b/_includes/section_contact.html
@@ -2,7 +2,7 @@
 <div id="contactBubble" class="rounded_panel txt_lightgrey" style="text-align:center;">
         <div class="top-rounded-panel grey-bg">
 		<br>
-		<img style="margin-left:auto;margin-right:28%;display:block;border: 3px solid #ddd; border-radius: 4px; padding:10px;" src="{{site.url}}/assets/portrait.png" class="img-fluid" width="55%" height="auto">
+		<img style="margin-left:auto;margin-right:28%;display:block;border: 3px solid #005985; border-radius: 4px; padding:10px;" src="{{site.url}}/assets/portrait.png" class="img-fluid" width="55%" height="auto">
                 <h1 id="user-contact">Contact Me &nbsp;</h1>
         </div>
         <div class="content-rounded-panel">
