--- a/_includes/section_education.html
+++ b/_includes/section_education.html
@@ -8,8 +8,8 @@
 				<thead>
 					<tr>
 						<th><a style="cursor: pointer;">University</a></th>
-						<th><a style="cursor: pointer;">Field of Study</a></th>
-						<th><a style="cursor: pointer;">Degree</a></th>
+						<th><a style="cursor: pointer;">Field</a></th>
+						<th><a style="cursor: pointer;">Program</a></th>
 						<th class="hidden-sm hidden-xs" ><a style="cursor: pointer;">Expected Graduation</a></th>
 					</tr>
 				</thead>
