--- a/_includes/section_resume.html
+++ b/_includes/section_resume.html
@@ -9,7 +9,7 @@
 					<img data-shadow="none" data-shadow-direction="middle" height="auto" width="50%" src="{{site.url}}/assets/resume.png" alt="" style="opacity: 1;">
 				</td></tr>
 				<tr><td align="center">
-					<a target="_blank" style="text-decoration: underline;" href="{{site.url}}/assets/resume.pdf">Download a PDF Version</a>
+					<a target="_blank" style="color:coral;text-decoration: underline;" href="{{site.url}}/assets/resume.pdf">Download a PDF Version</a>
 				</td></tr>
 			</table>
 		</div>
