--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-inverse  navbar-fixed-top navbar-dark bg-dark">
 	<div class="container">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="#" style="color:coral;">
 				{{site.title}}
 			</a>
 		</div>
 		<div id="navbar" class="navbar-header">
 			<ul class="nav navbar-nav navbar navbar-right">
 				{% for link in site.primarylinks %}
-					<div class="col"><li><a style="color:gray;" class="nav-link" href="{{link.url}}" target="_blank">{{link.title}}</a></li></div>
+					<div class="col"><li><img src="{{site.url}}/assets/{{link.logo}}" width="{{link.logo_size}}px" height="{{link.logo_size}}px" class="img-fluid"><a style="color:coral;" class="nav-link" href="{{link.url}}" target="_blank">{{link.title}}</a></li></div>
 				{% endfor %}
 			</ul>
 		</div>
