--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Parallax effect -->
+<div class="parallax">
+
        {% include head.html %}
        <body>
              {% include header.html %}
              <div class="container">
                    {{ content }}
-                   {% include footer.html %}
             </div>
-		{% include jsimports.html %}
+      {% include footer.html %}
       </body>
+      {% include jsimports.html %}
+
+</div>
+
 </html>
