--- a/css/main.scss
+++ b/css/main.scss
@@ -6,7 +6,7 @@
 /** Parallax scrolling effect **/
 .parallax {
     /** The image used **/ 
-    background-image: url("{{site.url}}/assets/background_laptop.jpg");	
+    background: url('../assets/background_laptop.jpg');
 
     /* Set a specific height */
     min-height: 100%; 
