still needs udpates

--- a/_includes/LI.html
+++ b/_includes/LI.html
@@ -1,8 +1,3 @@
-<!--
-<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="josh-rabinowitz-915705158">
+<div class="LI-profile-badge"  data-version="v1" data-size="100%" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="josh-rabinowitz-915705158">
 <a class="LI-simple-link" target="_blank" href='https://www.linkedin.com/in/josh-rabinowitz-915705158?trk=profile-badge'>Josh Rabinowitz</a>
-</div>
--->
-<div class="container">
-<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="josh-rabinowitz-915705158"><a class="LI-simple-link" href='https://www.linkedin.com/in/josh-rabinowitz-915705158?trk=profile-badge'>Josh Rabinowitz</a></div>
 </div>
