--- a/_includes/section_courses.html
+++ b/_includes/section_courses.html
@@ -1,4 +1,4 @@
-<div class="rounded_panel txt_lightgrey">
+<div class="rounded_panel txt_lightgrey" style="font-size:1vw;">
         <div class="top-rounded-panel grey-bg">
                 <h1>Relevant Coursework</h1>
         </div>
