--- a/_includes/section_skills.html
+++ b/_includes/section_skills.html
@@ -1,4 +1,4 @@
-<div id="skillsBubble" class="rounded_panel txt_lightgrey" style="font-size:1vw;">
+<div id="skillsBubble" class="rounded_panel txt_lightgrey">
 	<div class="top-rounded-panel grey-bg">
 		<h1 id="user-skills">Skills</h1>
 	</div>
