--- a/_includes/section_resume.html
+++ b/_includes/section_resume.html
@@ -2,11 +2,11 @@
 	<div style="text-align:center;" class="top-rounded-panel grey-bg">
 		<h1 id="user-resume">Resume &nbsp;</h1>
 	</div>
-	<div class="content-rounded-panel">
+	<div class="content-rounded-panel" style="text-align:center;">
 		<div id="resumePDF">
 			<table>
 				<tr><td align="center">
-					<img data-shadow="none" data-shadow-direction="middle" height="auto" width="50%" src="{{site.url}}/assets/resume.png" alt="" style="opacity: 1;">
+					<img class="img-fluid" data-shadow="none" data-shadow-direction="middle" height="16%" width="auto" border=".5" src="{{site.url}}/assets/resume.png" alt="" style="opacity:1;margin-left:auto;margin-right:auto;dispaly:block;border: 1px solid #ddd;">
 				</td></tr>
 				<tr><td align="center">
 					<a target="_blank" style="color:coral;text-decoration: underline;" href="{{site.url}}/assets/resume.pdf">Download a PDF Version</a>
