github widget works

--- a/_includes/jsimports.html
+++ b/_includes/jsimports.html
@@ -8,3 +8,6 @@
 <!--  LinkedIn Badge -->
 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
+<!-- New Github Repo Widget -->
+<script type="text/javascript" src="./js/GithubRepoWidget.min.js"></script>
+
