--- a/_includes/section_courses.html
+++ b/_includes/section_courses.html
@@ -2,7 +2,7 @@
         <div class="top-rounded-panel grey-bg">
                 <h1>Relevant Coursework</h1>
         </div>
-        <div class="content-rounded-panel">
+        <div id="coursework" class="content-rounded-panel ::-webkit-scrollbar ::-webkit-scrollbar-thumb" style="overflow-y:scroll;overflow-x:hidden;height:220px;">
                 <div class="row">
 		{% for edu in site.education %}
 			<div class="col">
