--- a/_includes/section_education.html
+++ b/_includes/section_education.html
@@ -1,10 +1,10 @@
-<div class="rounded_panel txt_lightgrey">
+<div class="rounded_panel txt_lightgrey" style="margin-bottom:0px;">
 	<div class="top-rounded-panel grey-bg">
 		<h1>Education</h1>
 	</div>
-	<div class="content-rounded-panel">
+	<div class="content-rounded-panel" style="margin-bottom:0px;">
 		<div>
-			<table class="table table-striped table-hover table-condensed">
+			<table class="table table-striped table-hover table-condensed" style="margin-bottom:0px;">
 				<thead>
 					<tr>
 						<th><a style="cursor: pointer;">University</a></th>
@@ -25,6 +25,6 @@
 				</tbody>
 			</table>
 		</div>
-		<br>
 	</div>
 </div>
+<br>
