removed broken badge

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{site.title}}</title>
-
   <link rel="stylesheet" href="/css/main.css">
+
+  <!-- LinkedIn Badge -->
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
 </head>
