--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,10 +4,9 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-I am a Senior Engineer working at Covestor, having previously spent over 6 years as a technical consultant at Accenture, giving me a good blend of enterprise and start-up experience. 
+I am a senior at DePauI University finishing my degree in cybersecurity. Having previously studied electrical and computer engineering at UIUC, I have a broad set of skills pertaining to both hardware and software.
 <br><br>
-I enjoy creating great products with great user experiences and working in a dynamic environment with a focus on good development practices, automation and shipping small, frequent releases.
+Below you'll find some of my latest side projects. If you'd like to learn how I can make your company's information more secure, please reach out to me via email.
 		</div>
-		<br>
 	</div>
 </div>
