added additional info

--- a/_includes/section_info.html
+++ b/_includes/section_info.html
@@ -5,15 +5,14 @@
         <div class="content-rounded-panel">
                 <div id="introBlurb">
 
--building superheterodyne AM radio from scratch
-<br>-flashlight driven arduino vehicle w/photoresistors
-<br>-IRIS robot electrical team
-<br>-2 years in high-end network/telecomm lab designing and configuring secure enterprise networks; used CISCO routers, switches and ASA's
-<br>-experience w/CTF and topic-based security challenges (overthewire, root-me, vulnhub)
-<br>-freelance experience securing websites on upwork.com
-<br>-Experience removing malware from personal computers
+-Worked with a partner to build a funtional Superheterodyne AM Radio Receiver from scratch; built modules for amplification, filters, modulation/demodulation, etc.
+<br>-Designed and prototyped an arduino-based autonomous vehicle which incorporated a series of photoresistors, allowing the vehicle to be steered intuitively with a flashlight
+<br>-Headed the electrical team at UIUC for Illinois Robotics in Space; taught team members PCB design software, built circuitry for lunar mining robot in NASA competition
+<br>-Over two years of hands-on experience in high-end network/telecomm security lab configuring corporate enterprise networks, using Cisco routers, switches and ASA's
+<br>-Several years of CTF practice, including topic-based wargames and vulnerable VM's (Overthewire.org, Root-me.org, Vulnhub.com, exploit-exercises.com)
+<br>-Freelance experience with clients on Upwork.com, consulting and securing personal/business websites 
+<br>-Plenty of experience removing adware and/or malware from personal computers
                 </div>
-                <br>
         </div>
 </div>
 
