fixed font size

--- a/_includes/section_info.html
+++ b/_includes/section_info.html
@@ -3,7 +3,7 @@
                 <h1 id="user-intro">Additional Information</h1>
         </div>
         <div class="content-rounded-panel">
-                <div id="introBlurb">
+                <div id="introBlurb" style="font-size:1vw;">
 
 -Worked with a partner to build a funtional Superheterodyne AM Radio Receiver from scratch; built modules for amplification, filters, modulation/demodulation, etc.
 <br>-Designed and prototyped an arduino-based autonomous vehicle which incorporated a series of photoresistors, allowing the vehicle to be steered intuitively with a flashlight
