--- a/_includes/section_info.html
+++ b/_includes/section_info.html
@@ -11,7 +11,7 @@
 <br>-Over two years of hands-on experience in high-end network/telecomm security lab configuring corporate enterprise networks, using Cisco routers, switches and ASA's
 <br>-Several years of CTF practice, including topic-based wargames and vulnerable VM's (Overthewire.org, Root-me.org, Vulnhub.com, exploit-exercises.com)
 <br>-Freelance experience with clients on Upwork.com, consulting and securing personal/business websites 
-<br>-Plenty of experience removing adware and/or malware from personal computers
+<br>-Highly experienced removing adware and/or malware from personal computers
                 </div>
         </div>
 </div>
