fixed additional info

--- a/_includes/section_info.html
+++ b/_includes/section_info.html
@@ -6,12 +6,12 @@
                 <div id="introBlurb" style="font-size:1vw;">
 
 -Worked with a partner to build a funtional Superheterodyne AM Radio Receiver from scratch; built modules for amplification, filters, modulation/demodulation, etc.
-<br>-Designed and prototyped an arduino-based autonomous vehicle which incorporated a series of photoresistors, allowing the vehicle to be steered intuitively with a flashlight
-<br>-Headed the electrical team at UIUC for Illinois Robotics in Space; taught team members PCB design software, built circuitry for lunar mining robot in NASA competition
-<br>-Over two years of hands-on experience in high-end network/telecomm security lab configuring corporate enterprise networks, using Cisco routers, switches and ASA's
-<br>-Several years of CTF practice, including topic-based wargames and vulnerable VM's (Overthewire.org, Root-me.org, Vulnhub.com, exploit-exercises.com)
-<br>-Freelance experience with clients on Upwork.com, consulting and securing personal/business websites 
-<br>-Highly experienced removing adware and/or malware from personal computers
+<br><br>-Designed and prototyped an arduino-based autonomous vehicle which incorporated a series of photoresistors, allowing the vehicle to be steered intuitively with a flashlight
+<br><br>-Headed the electrical team at UIUC for Illinois Robotics in Space; taught team members PCB design software, built circuitry for lunar mining robot in NASA competition
+<br><br>-Over two years of hands-on experience in high-end network/telecomm security lab configuring corporate enterprise networks, using Cisco routers, switches and ASA's
+<br><br>-Several years of CTF practice, including topic-based wargames and vulnerable VM's (Overthewire.org, Root-me.org, Vulnhub.com, exploit-exercises.com)
+<br><br>-Freelance experience with clients on Upwork.com, consulting and securing personal/business websites 
+<br><br>-Highly experienced removing adware and/or malware from personal computers
                 </div>
         </div>
 </div>
