--- a/_includes/section_education.html
+++ b/_includes/section_education.html
@@ -10,7 +10,7 @@
 						<th><a style="cursor: pointer;">University</a></th>
 						<th><a style="cursor: pointer;">Field</a></th>
 						<th><a style="cursor: pointer;">Program</a></th>
-						<th class="hidden-sm hidden-xs" ><a style="cursor: pointer;">Expected Graduation</a></th>
+						<th class="hidden-sm hidden-xs" ><a style="cursor: pointer;">Graduation</a></th>
 					</tr>
 				</thead>
 				<tbody>
