--- a/_includes/section_intro.html
+++ b/_includes/section_intro.html
@@ -4,9 +4,11 @@
 	</div>
 	<div class="content-rounded-panel">
 		<div id="introBlurb">
-I am a senior at DePauI University finishing my degree in cybersecurity. Having previously studied electrical and computer engineering at UIUC, I have a broad set of skills pertaining to both hardware and software.
+Proven security professional and consultant specializing in penetration testing, web/mobile application security, Android OS, embedded systems and IoT security. Experienced in reverse engineering, fuzz-testing, malware analysis, exploit development, cryptography and offensive tool design. I have a passion for security research, 'hardware hacking' and electrical engineering.
 <br><br>
-Below you'll find some of my latest side projects. If you'd like to learn how I can make your company's information more secure, please reach out to me via email.
+I have worked with clients ranging from small or medium-sized startups to 'Big Four' tech giants, providing services such as vulnerability assessments, threat modeling, architecture reviews, staff augmentation, tool/platform design, process automation and security training and education. I possess strong writing/communication skills and work well as part of a team. I receive a great deal of satisfaction from helping businesses protect what they value and teaching people about security.
+<br><br>
+Below you'll find some of my latest side projects. If you'd like to learn how I can make your company's information more secure, please reach out to me via email or LinkedIn.
 		</div>
 	</div>
 </div>
